methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:42: error: illegal start of simple expression
}
^